package com.pedrop.calculadora;

/**
 * Classe que centraliza a execução das operações matemáticas e o registro no histórico.
 * Usa Calculator para os cálculos e Historico para registrar as operações.
 */
public class Operacoes {
    private final Calculator calc;
    private final Historico historico;

    public Operacoes(Calculator calc, Historico historico) {
        this.calc = calc;
        this.historico = historico;
    }

    // Executa a operação e retorna a string que deve ser mostrada ao utilizador.
    // Aceita operadores em texto ou símbolos (+ - * /). Grava no historico no formato: "n1 oper n2 = resultado".
    public String executar(String oper, double a, double b) {
        double res;
        String simbolo;

        // Normaliza o operador: aceita palavras e símbolos
        if (oper.equals("+") || oper.equalsIgnoreCase("add") || oper.equalsIgnoreCase("mais")) {
            res = calc.add(a, b);
            simbolo = "+";
        } else if (oper.equals("-") || oper.equalsIgnoreCase("sub") || oper.equalsIgnoreCase("menos")) {
            res = calc.subtract(a, b);
            simbolo = "-";
        } else if (oper.equals("*") || oper.equalsIgnoreCase("mult") || oper.equalsIgnoreCase("x") || oper.equalsIgnoreCase("vezes")) {
            res = calc.multiply(a, b);
            simbolo = "*";
        } else if (oper.equals("/") || oper.equalsIgnoreCase("div") || oper.equalsIgnoreCase("dividir") || oper.equalsIgnoreCase("devidido") || oper.equalsIgnoreCase("por")) {
            try {
                res = calc.divide(a, b);
                simbolo = "/";
            } catch (IllegalArgumentException ex) {
                String linha = a + " " + "/" + " " + b + " = Erro: " + ex.getMessage();
                historico.adicionar(linha);
                return "Erro: " + ex.getMessage();
            }
        } else {
            return "Comando nao encontrado: " + oper;
        }

        String registro = a + " " + simbolo + " " + b + " = " + res;
        historico.adicionar(registro);
        return String.valueOf(res);
    }
}
